# my_digital_resume

./: .gitignore  DEPLOYMENT_VALIDATION_REPORT.md  PORT_UPDATE_SUMMARY.md  README.md  README_new.md  docker-compose.yml  validation_report.txt
backend/: .envtemplate  Dockerfile  IMPROVEMENTS.md  README.md  analytics.py  app.py  pyproject.toml  run_backend.sh  setup_react_app.sh
backend/static/: Resume_satish_2025.txt
frontend/: .env.example  Dockerfile  IMPROVEMENTS.md  README.md  index.html  package-lock.json  package.json  run_frontend.sh  vite.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  ErrorBoundary.js  config.js  index.css
