[project]
name = "satish-ai-portfolio"
version = "1.0.0"
description = "Interactive AI Portfolio - Chat with Satish, Principal Architect & Engineering Leader specializing in AI/ML Product Development (React + FastAPI)"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Satish Kumar", email = "snvskiit@gmail.com"}
]
keywords = ["portfolio", "chatbot", "ai", "react", "fastapi", "llm", "resume", "architecture", "leadership", "product-development"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "openai>=1.3.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "requests>=2.31.0"
]

[project.urls]
"Homepage" = "https://github.com/your-username/satish-ai-portfolio"
"Repository" = "https://github.com/your-username/satish-ai-portfolio"
